# TrafficSimulator

./: CMakeLists.txt  README.txt  SimulationUI.cpp  SimulationUI.h  imgui.ini  main.cpp  traffic.cpp  traffic.h  vehicles.cpp  vehicles.h
src/: SimulationUI.cpp  SimulationUI.h  main.cpp  traffic.h  vehicles.cpp  vehicles.h
